# SunburstClusterPlugin

./: .gitignore  CMakeLists.txt  LICENSE  PluginInfo.json  README.md  conanfile.py
.github/workflows/: build.yml
res/: sunburst_resources.qrc
res/js_libs/: qwebchannel.tools.js
res/sunburst/: LICENSE_SUNBURST_ICS  d3.sunburst.js  sunburst.css  sunburst.html  sunburst.tools.js
src/: LoadDialog.cpp  LoadDialog.h  SettingsAction.cpp  SettingsAction.h  SunburstClusterPlugin.cpp  SunburstClusterPlugin.h  SunburstClusterWidget.cpp  SunburstClusterWidget.h  Utils.cpp  Utils.h
